<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <!--- Header text for the list of Toppings [Character limits 20] -->
    <string name="toppings">Toppings</string>

    <!--- Thank you message for the order summary [Character limits NONE] -->
    <string name="thank_you">Thank you!</string>

    <!--- "Name: Ahmad" Ahmad is the name of the user. -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Ahmad">%s</xliff:g></string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate Topping</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">1</string>
    <string name="order">Order</string>
    <string name="order_summary_whipped_cream">Add whipped cream <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add Chocolate: <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="2">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$10">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>
