<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_input"
            android:inputType="textCapWords"
            android:hint="@string/name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:layout_marginBottom="16dp"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"/>

        <CheckBox
            android:id="@+id/whipped_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp" />

        <CheckBox
            android:id="@+id/chocolate_topping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:id="@+id/textView"
            android:layout_marginBottom="16dp"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal">

            <Button
            android:id="@+id/buttonp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:onClick="decrement"/>

            <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/initial_quantity_value"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

            <Button
            android:id="@+id/buttonm"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:onClick="increment"/>

           </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/order"
            android:onClick="submitOrder"/>

    </LinearLayout>
</ScrollView>
</android.support.constraint.ConstraintLayout>
